# Medbridge-Hiring-Partner-Project

./: .gitignore  CHANGELOG.md  TODO.md
ai_health_coach/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  TODO.md  pyproject.toml
ai_health_coach/app/: config.py  main.py
ai_health_coach/app/api/: clinician_routes.py  dependencies.py  routes.py  schemas.py
ai_health_coach/app/db/: models.py  repository.py  seed.py  session.py
ai_health_coach/app/graph/: parent.py  prompts.py  state.py  tools.py
ai_health_coach/app/graph/nodes/: active.py  memory.py  onboarding.py  re_engaging.py  safety.py  weekly_review.py
ai_health_coach/app/middleware/: auth.py  logging_mw.py
ai_health_coach/app/services/: badges.py  clinician_ai.py  consent.py  daily_briefing.py  exercise_generator.py  exercise_progression.py  llm.py  pathway.py  risk_scoring.py  scheduler.py
ai_health_coach/app/static/: clinician.html  index.html
ai_health_coach/tests/: conftest.py
ai_health_coach/tests/test_api/: test_adherence_e2e.py  test_badges.py  test_clinician.py  test_clinician_ai.py  test_daily_briefing.py  test_education.py  test_endpoints.py  test_exercise_progression.py  test_goals.py  test_outcomes.py  test_pathway.py
ai_health_coach/tests/test_graph/: test_memory.py  test_router.py  test_state.py  test_weekly_review.py
ai_health_coach/tests/test_safety/: test_safety.py
